fix: change from flex to grid in catalog.css in .hotel-item

--- a/catalog.html
+++ b/catalog.html
@@ -148,72 +148,48 @@
                                 <img src="img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
                                 <h3 class="hotel-item-h3">Amara Resort & Spa</h3>
                             </a>
-                            <p class="name-and-price">
-                                <span>Гостиница</span>
-                                <span>От 4000 ₽</span>
-                            </p>
-                            <div class="more-and-like">
+                                <span class="price-name">Гостиница</span>
+                                <span class="price-value">От 4000 ₽</span>
                                 <a class="button-more" href="#">подробнее</a>
                                 <button class="button-favorite" type="button">в избранное</button>
-                            </div>
-                            <div class="stars-and-rank">
                                 <img src="img/icons/fourStars.svg" alt="4 звезды">
-                                <p>Рейтинг: <span>8,5</span></p>
-                            </div>
+                                <p class="rank">Рейтинг: <span>8,5</span></p>
                         </li>
                         <li class="hotel-item">
                             <a href="#" class="hotel-about">
                                 <img src="img/images/VillasAtPocoDiablo.jpg" alt="Villas at Poco Diablo">
                                 <h3 class="hotel-item-h3">Villas at Poco Diablo</h3>
                             </a>
-                            <p class="name-and-price">
-                                <span>Гостиница</span>
-                                <span>От 5000 ₽</span>
-                            </p>
-                            <div class="more-and-like">
-                                <a class="button-more" href="#">подробнее</a>
-                                <button class="button-favorite button-favorite-choose" type="button">в избранном</button>
-                            </div>
-                            <div class="stars-and-rank">
-                                <img src="img/icons/fourStars.svg" alt="4 звезды">
-                                <p>Рейтинг: <span>9,2</span></p>
-                            </div>
+                            <span class="price-name">Гостиница</span>
+                            <span class="price-value">От 5000 ₽</span>
+                            <a class="button-more" href="#">подробнее</a>
+                            <button class="button-favorite button-favorite-choose" type="button">в избранном</button>
+                            <img src="img/icons/fourStars.svg" alt="4 звезды">
+                            <p class="rank">Рейтинг: <span>9,2</span></p>
                         </li>
                         <li class="hotel-item">
                             <a href="#" class="hotel-about">
                                 <img src="img/images/DesertQuailInn.jpg" alt="Desert Quail Inn">
                                 <h3 class="hotel-item-h3">Desert Quail Inn</h3>
                             </a>
-                            <p class="name-and-price">
-                                <span>Гостиница</span>
-                                <span>От 2500 ₽</span>
-                            </p>
-                            <div class="more-and-like">
-                                <a class="button-more" href="#">подробнее</a>
-                                <button class="button-favorite" type="button">в избранное</button>
-                            </div>
-                            <div class="stars-and-rank">
-                                <img src="img/icons/threeStars.svg" alt="3 звезды">
-                                <p>Рейтинг: <span>6,9</span></p>
-                            </div>
+                            <span class="price-name">Гостиница</span>
+                            <span class="price-value">От 2500 ₽</span>
+                            <a class="button-more" href="#">подробнее</a>
+                            <button class="button-favorite" type="button">в избранное</button>
+                            <img src="img/icons/threeStars.svg" alt="3 звезды">
+                            <p class="rank">Рейтинг: <span>6,9</span></p>
                         </li>
                         <li class="hotel-item">
                             <a href="#" class="hotel-about">
                                 <img src="img/images/GreenTreeInn.jpg" alt="GreenTree Inn">
                                 <h3 class="hotel-item-h3">GreenTree Inn</h3>
                             </a>
-                            <p class="name-and-price">
-                                <span>Гостиница</span>
-                                <span>От 1500 ₽</span>
-                            </p>
-                            <div class="more-and-like">
-                                <a class="button-more" href="#">подробнее</a>
-                                <button class="button-favorite" type="button">в избранное</button>
-                            </div>
-                            <div class="stars-and-rank">
-                                <img src="img/icons/twoStars.svg" alt="2 звезды">
-                                <p>Рейтинг: <span>5,0</span></p>
-                            </div>
+                            <span class="price-name">Гостиница</span>
+                            <span class="price-value">От 1500 ₽</span>
+                            <a class="button-more" href="#">подробнее</a>
+                            <button class="button-favorite" type="button">в избранное</button>
+                            <img src="img/icons/twoStars.svg" alt="2 звезды">
+                            <p class="rank">Рейтинг: <span>5,0</span></p>
                         </li>
                     </ul>
                     <div class="light-line"></div>
