--- a/catalog.html
+++ b/catalog.html
@@ -28,19 +28,19 @@
                             <a class="navigation-link current-link" href="#">Гостиницы</a>
                         </li>
                     </ul>
-                    <ul class="nav-buttons">
-                        <li class="nav-button">
-                            <button class="search-button" aria-label="поиск">
+                    <ul class="button-nav-list">
+                        <li class="button-nav-item">
+                            <button class="button-search" aria-label="поиск">
                                 <img src="img/icons/search.svg" alt="search" width="20" height="20">
                             </button>
                         </li>
-                        <li class="nav-button">
-                            <button class="like-button" type="button" aria-label="лайк">
+                        <li class="button-nav-item">
+                            <button class="button-like" type="button" aria-label="лайк">
                                 <img src="img/icons/heart.svg" alt="put a like" width="20" height="20">
                             </button>
                         </li>
-                        <li class="nav-button">
-                            <button class="brown-button" type="button" onclick="document.location='#'">
+                        <li class="button-nav-item">
+                            <button class="button-want button-brown" type="button" onclick="document.location='#'">
                                 Хочу сюда!
                             </button>
                             <!--это ссылка на попап -->
@@ -109,7 +109,7 @@
                             <input class="slider" type="range" min="0" max="15000" step="1">
                         </fieldset>
                         <div class="filter-buttons">
-                            <button class="apply" type="submit">Применить</button>
+                            <button class="apply button-blue" type="submit">Применить</button>
                             <button class="reset" type="reset">Сбросить</button>
                         </div>
                     </form>
@@ -118,7 +118,7 @@
                     <div class="catalog-head">
                         <div class="catalog-sorting">
                             <h2 class="catalog-h2">Найдено гостиниц: 38</h2>
-                            <select name="sorting" id="sorting">
+                            <select class="sorting" name="sorting" id="sorting">
                                 <option value="cheap">Сначала дешевые</option>
                                 <option value="costly">Сначала дорогие</option>
                                 <option value="rating">По рейтингу</option>
@@ -150,8 +150,8 @@
                             </a>
                                 <span class="price-name">Гостиница</span>
                                 <span class="price-value">От 4000 ₽</span>
-                                <a class="button-more" href="#">подробнее</a>
-                                <button class="button-favorite" type="button">в избранное</button>
+                                <a class="button-more button-brown" href="#">подробнее</a>
+                                <button class="button-favorite button-blue" type="button">в избранное</button>
                                 <img src="img/icons/fourStars.svg" alt="4 звезды">
                                 <p class="rank">Рейтинг: <span>8,5</span></p>
                         </li>
@@ -162,7 +162,7 @@
                             </a>
                             <span class="price-name">Гостиница</span>
                             <span class="price-value">От 5000 ₽</span>
-                            <a class="button-more" href="#">подробнее</a>
+                            <a class="button-more button-brown" href="#">подробнее</a>
                             <button class="button-favorite button-favorite-choose" type="button">в избранном</button>
                             <img src="img/icons/fourStars.svg" alt="4 звезды">
                             <p class="rank">Рейтинг: <span>9,2</span></p>
@@ -174,8 +174,8 @@
                             </a>
                             <span class="price-name">Гостиница</span>
                             <span class="price-value">От 2500 ₽</span>
-                            <a class="button-more" href="#">подробнее</a>
-                            <button class="button-favorite" type="button">в избранное</button>
+                            <a class="button-more button-brown" href="#">подробнее</a>
+                            <button class="button-favorite button-blue" type="button">в избранное</button>
                             <img src="img/icons/threeStars.svg" alt="3 звезды">
                             <p class="rank">Рейтинг: <span>6,9</span></p>
                         </li>
@@ -186,8 +186,8 @@
                             </a>
                             <span class="price-name">Гостиница</span>
                             <span class="price-value">От 1500 ₽</span>
-                            <a class="button-more" href="#">подробнее</a>
-                            <button class="button-favorite" type="button">в избранное</button>
+                            <a class="button-more button-brown" href="#">подробнее</a>
+                            <button class="button-favorite button-blue" type="button">в избранное</button>
                             <img src="img/icons/twoStars.svg" alt="2 звезды">
                             <p class="rank">Рейтинг: <span>5,0</span></p>
                         </li>
@@ -198,19 +198,19 @@
                             <a class="pagination-link pagination-current" href="#">1</a>
                         </li>
                         <li class="pagination-item">
-                            <a class="pagination-link" href="#">2</a>
+                            <a class="pagination-link button-blue" href="#">2</a>
                         </li>
                         <li class="pagination-item">
-                            <a class="pagination-link" href="#">3</a>
+                            <a class="pagination-link button-blue" href="#">3</a>
                         </li>
                         <li class="pagination-item">
-                            <a class="pagination-link" href="#">4</a>
+                            <a class="pagination-link button-blue" href="#">4</a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-link pagination-etc" href="#">...</a>
                         </li>
                         <li class="pagination-item">
-                            <a class="pagination-link" href="#">10</a>
+                            <a class="pagination-link button-blue" href="#">10</a>
                         </li>
                     </ul>
                 </section>
@@ -218,8 +218,9 @@
                     <h2 class="subscribe-h2">Подпишитесь на рассылку</h2>
                     <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
                     <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+                        <label class="visually-hidden" for="email">Ваш e-mail</label>
                         <input class="subscribe-email" type="email" name="email" id="email" placeholder="Ваш e-mail">
-                        <button class="button-subscribe" type="submit">Подписаться</button>
+                        <button class="button-subscribe button-blue" type="submit">Подписаться</button>
                     </form>
                 </section>
             </main>
