feat: add like number

--- a/catalog.html
+++ b/catalog.html
@@ -12,6 +12,8 @@
     </head>
     <body>
         <section class="page-container">
+
+            <!-- HEADER -->
             <header class="main-header">
                 <nav class="all-navigation">
                     <a href="index.html" class="logo">
@@ -35,6 +37,7 @@
                             </button>
                         </li>
                         <li class="button-nav-item">
+                            <span class="like-number">12</span>
                             <button class="button-like" type="button" aria-label="лайк">
                                 <img src="img/icons/heart.svg" alt="put a like" width="20" height="20">
                             </button>
@@ -48,7 +51,11 @@
                     </ul>
                 </nav>
             </header>
+
+
             <main class="main">
+
+                <!-- FILTERS -->
                 <section class="filter">
                     <h1 class="filter-h1">Гостиницы Седоны</h1>
                     <div class="filter-links">
@@ -114,6 +121,8 @@
                         </div>
                     </form>
                 </section>
+
+                <!-- CATALOG -->
                 <section class="catalog">
                     <div class="catalog-head">
                         <div class="catalog-sorting">
@@ -214,6 +223,8 @@
                         </li>
                     </ul>
                 </section>
+
+                <!-- SUBSCRIBE -->
                 <section class="subscribe">
                     <h2 class="subscribe-h2">Подпишитесь на рассылку</h2>
                     <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
@@ -224,6 +235,8 @@
                     </form>
                 </section>
             </main>
+
+            <!-- FOOTER -->
             <footer class="footer">
                 <div class="footer-container">
                     <ul class="social-list">
