--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <section class="page-container">
+
+      <!-- HEADER -->
       <header class="main-header">
         <nav class="all-navigation">
           <a href="index.html" class="logo">
@@ -30,11 +32,12 @@
           </ul>
           <ul class="button-nav-list">
             <li class="button-nav-item">
-              <button class="button-search" aria-label="поиск">
+              <button class="button-search" aria-label="поиск по сайту">
                 <img src="img/icons/search.svg" alt="search" width="20" height="20">
               </button>
             </li>
             <li class="button-nav-item">
+              <span class="like-number">12</span>
               <button class="button-like" type="button" aria-label="лайк">
                 <img src="img/icons/heart.svg" alt="put a like" width="20" height="20">
               </button>
@@ -48,7 +51,10 @@
           </ul>
         </nav>
       </header>
+
       <main class="main">
+
+        <!-- HERO -->
         <section class="hero">
           <h1 class="visually-hidden">sedona</h1>
           <!-- hidden h1, write for screenreaders -->
@@ -61,6 +67,8 @@
             <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
         </section>
+
+        <!-- ADVANTAGE -->
         <section class="advantage" id="advantage">
           <div class="advantage-item">
             <h3 class="advantage-h3">Настоящий городок</h3>
@@ -68,7 +76,7 @@
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <div class="advantage-item advantage-img">
-            <img src="img/images/true-city.jpg" alt="дом среди цветов" width="800" height="385">
+            <img src="img/images/true-city.jpg" alt="дом среди цветов">
           </div>
           <div class="advantage-item">
             <h3 class="advantage-h3">Небольшая площадь</h3>
@@ -86,7 +94,7 @@
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </div>
           <div class="advantage-item advantage-img">
-            <img src="img/images/devil-bridge.jpg" alt="рыжие горы" width="800" height="385">
+            <img src="img/images/devil-bridge.jpg" alt="рыжие горы">
           </div>
           <div class="advantage-item">
             <h3 class="advantage-h3">Там есть<br /> мост дьявола</h3>
@@ -118,6 +126,8 @@
             </li>
           </ul>
         </section>
+
+        <!-- HOTEL SEARCH -->
         <section class="hotel-search">
           <h2 class="hotel-search-h2">Заинтересовались?</h2>
           <p>Укажите предполагаемые даты поездки,<br>
@@ -127,6 +137,8 @@
           </a>
           <!-- ссылка на попап а не стр -->
         </section>
+
+        <!-- SUBSCRIBE -->
         <section class="subscribe">
           <h2 class="subscribe-h2">Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
@@ -137,6 +149,8 @@
           </form>
         </section>
       </main>
+
+      <!-- FOOTER -->
       <footer class="footer">
         <div class="footer-container">
           <ul class="social-list">
