fix: catalog-filter.jpg, add smooth features

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
         <title>HTML Academy: Седона</title>
     </head>
     <body>
-        <section class="page-container">
+        <div class="page-container">
 
             <!-- HEADER -->
             <header class="main-header">
@@ -297,6 +297,6 @@
                     </a>
                 </div>
             </footer>
-        </section>
+        </div>
     </body>
 </html>
