--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <section class="page-container">
+    <div class="page-container">
 
       <!-- HEADER -->
       <header class="main-header">
@@ -211,6 +211,6 @@
           </a>
         </div>
       </footer>
-    </section>
+    </div>
   </body>
 </html>
