feat: change slider style

--- a/catalog.html
+++ b/catalog.html
@@ -120,6 +120,7 @@
                                 <input class="price-form-field" type="number" min="0" max="15000" name="max-price" value="9000">
                                 до
                             </label>
+                            <div class="slider-min"></div>
                             <input class="slider" type="range" min="0" max="15000" step="1">
                         </fieldset>
                         <div class="filter-buttons">
