--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,8 @@
                                 <h4 class="filter-form-name">Тип жилья:</h4>
                             </legend>
                             <label class="radio-container" for="hotel">
-                                <input class="radio-real" type="radio" name="house-type" id="hotel" value="hotel" checked>
+                                <input class="radio-real" type="radio" name="house-type" id="hotel" value="hotel"
+                                    checked>
                                 Гостиница
                                 <span class="radio-style"></span>
                             </label>
@@ -103,7 +104,8 @@
                                 <span class="radio-style"></span>
                             </label>
                             <label class="radio-container" for="apartments">
-                                <input class="radio-real" type="radio" name="house-type" id="apartments" value="apartments">
+                                <input class="radio-real" type="radio" name="house-type" id="apartments"
+                                    value="apartments">
                                 Апартаменты
                                 <span class="radio-style"></span>
                             </label>
@@ -115,11 +117,13 @@
                             <div class="range">
                                 <div class="range-wrapper">
                                     <label class="price-form price-form-one">
-                                        <input class="price-form-field" type="number" min="0" max="15000" name="min-price" value="0">
+                                        <input class="price-form-field" type="number" min="0" max="15000"
+                                            name="min-price" value="0">
                                         <span class="price-form-name">от</span>
                                     </label>
                                     <label class="price-form price-form-two">
-                                        <input class="price-form-field" type="number" min="0" max="12000" name="max-price" value="9000">
+                                        <input class="price-form-field" type="number" min="0" max="12000"
+                                            name="max-price" value="9000">
                                         <span class="price-form-name">до</span>
                                     </label>
                                 </div>
@@ -336,28 +340,32 @@
                 </div>
             </footer>
         </div>
-        <!-- надо заменить из index.html -->
-        <div class="modal-container modal-container-close">
+        <div class="modal-container visually-hidden">
             <div class="modal">
                 <div class="modal-searh">
                     <h2>Поиск гостиницы в Седоне</h2>
                     <button class="button-close">
                         <span class="visually-hidden">Закрыть</span>
+                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.4905 1.78288L13.1982 0.49057L7.49048 6.19826L1.78279 0.49057L0.490479
+                    1.78288L6.19817 7.49057L0.490479 13.1983L1.78279 14.4906L7.49048 8.78288L13.1982
+                    14.4906L14.4905 13.1983L8.78279 7.49057L14.4905 1.78288Z" fill="black" />
+                        </svg>
                     </button>
                 </div>
                 <form class="modal-content" action="https://echo.htmlacademy.ru/" method="post">
                     <label class="modal-content-arrival">
                         <h4 class="modal-content-h4">Дата заезда:</h4>
-                        <input type="data" name="trip-start" value="2018-07-22" min="2018-01-01" max="2018-12-31"
-                            required>
+                        <input class="field field-data" type="data" name="trip-start" value="27 апреля 2020"
+                            min="2023-01-01" max="2023-12-31" required>
                     </label>
                     <span class="modal-content-warn warn-red">
                         Мы не можем отправить вас в прошлое.
                     </span>
                     <label class="modal-content-departure">
                         <h4 class="modal-content-h4">Дата выезда:</h4>
-                        <input type="data" name="trip-end" value="2018-07-22" min="2018-01-01" max="2018-12-31"
-                            required>
+                        <input class="field field-data" type="data" name="trip-end" value="1 сентября 2023"
+                            min="2023-01-01" max="2024-12-31" required>
                     </label>
                     <span class="modal-content-warn">
                         На эти даты есть свободные номера. Пока есть.
@@ -365,20 +373,62 @@
                     <div class="modal-content-people">
                         <label class="modal-content-adult">
                             <h4 class="modal-content-h4">Взрослые:</h4>
-                            <input type="number" name="adult-count" value="1">
+                            <div class="button-number">
+                                <button class="button-minus">
+                                    <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157"
+                                            fill-opacity="0.3" />
+                                    </svg>
+                                </button>
+                                <input class="field field-number" type="number" name="adult-count" value="1">
+                                <button class="button-plus">
+                                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157"
+                                            fill-opacity="0.3" />
+                                    </svg>
+                                </button>
+                            </div>
                         </label>
                         <label class="modal-content-child">
                             <h4 class="modal-content-h4">Дети:</h4>
-                            <button class="modal-content-info" data-title="Укажите количество детей,
-                            которые будут с вами, возраст
-                            которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.">i</button>
-                            <input type="number" name="child-count" value="0">
+                            <span class="tooltip">
+                                <button class="tooltip-toggle" type="button">
+                                    <svg width="2" height="12" viewBox="0 0 2 12" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z"
+                                            fill="white" />
+                                    </svg>
+                                </button>
+                                <span class="tooltip-text" role="tooltip">Укажите количество детей,
+                                    которые будут с вами, возраст
+                                    которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                            </span>
+                            <div class="button-number">
+                                <button class="button-minus">
+                                    <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157"
+                                            fill-opacity="0.3" />
+                                    </svg>
+                                </button>
+                                <input class="field field-number" type="number" name="child-count" value="0">
+                                <button class="button-plus">
+                                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157"
+                                            fill-opacity="0.3" />
+                                    </svg>
+                                </button>
+                            </div>
                         </label>
                     </div>
                     <button class="button-modal-content button-blue" type="submit">Найти</button>
                 </form>
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
 
 </html>
