--- a/catalog.html
+++ b/catalog.html
@@ -112,17 +112,17 @@
                         </fieldset>
                         <fieldset class="filter-form">
                             <legend>
-                                <h4 class="filter-form-name cost">Стоимость, ₽:</h4>
+                                <h4 class="filter-form-name cost">Стоимость, &#8381;:</h4>
                             </legend>
                             <div class="range">
-                                <div class="range-wrapper">
-                                    <label class="price-form price-form-one">
-                                        <input class="price-form-field" type="number" min="0" max="15000"
+                                <div class="price-wrapper">
+                                    <label class="price-form">
+                                        <input class="price-form-field price-form-one" type="number" min="0" max="15000"
                                             name="min-price" value="0">
                                         <span class="price-form-name">от</span>
                                     </label>
-                                    <label class="price-form price-form-two">
-                                        <input class="price-form-field" type="number" min="0" max="12000"
+                                    <label class="price-form">
+                                        <input class="price-form-field price-form-two" type="number" min="0" max="12000"
                                             name="max-price" value="9000">
                                         <span class="price-form-name">до</span>
                                     </label>
