--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <link rel="stylesheet" href="styles/common-style.css">
         <link rel="stylesheet" href="styles/catalog.css">
+        <link rel="icon" href="favicon.ico">
         <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
         <link rel="alternate icon" type="image/png" href="img/favicon/favicon.png">
         <title>HTML Academy: Седона</title>
@@ -61,10 +62,9 @@
                 <section class="filter">
                     <h1>Гостиницы Седоны</h1>
                     <div class="filter-links">
-                        <a class="filter-home-page" href="index.html">
+                        <a class="filter-home-page filter-hotel-link" href="index.html">
                             <img src="img/icons/home-page.svg" alt="ссылка на домашнюю страницу" width="13" height="15">
                         </a>
-                        <img src="img/icons/breadcrumbs.svg" alt="стрелка показывает на" width="6" height="10">
                         <a href="#" class="filter-hotel-link">Гостиницы</a>
                     </div>
                     <form class="form" action="https://echo.htmlacademy.ru/" method="get">
@@ -342,39 +342,35 @@
         </div>
         <div class="modal-container visually-hidden">
             <div class="modal">
-                <div class="modal-searh">
-                    <h2>Поиск гостиницы в Седоне</h2>
-                    <button class="button-close">
-                        <span class="visually-hidden">Закрыть</span>
-                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14.4905 1.78288L13.1982 0.49057L7.49048 6.19826L1.78279 0.49057L0.490479
+                <h2>Поиск гостиницы в Седоне</h2>
+                <button class="button-close">
+                    <span class="visually-hidden">Закрыть</span>
+                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.4905 1.78288L13.1982 0.49057L7.49048 6.19826L1.78279 0.49057L0.490479
                     1.78288L6.19817 7.49057L0.490479 13.1983L1.78279 14.4906L7.49048 8.78288L13.1982
                     14.4906L14.4905 13.1983L8.78279 7.49057L14.4905 1.78288Z" fill="black" />
-                        </svg>
-                    </button>
-                </div>
+                    </svg>
+                </button>
                 <form class="modal-content" action="https://echo.htmlacademy.ru/" method="post">
                     <label class="modal-content-arrival">
-                        <h4 class="modal-content-h4">Дата заезда:</h4>
-                        <input class="field field-data" type="data" name="trip-start" value="27 апреля 2020"
-                            min="2023-01-01" max="2023-12-31" required>
+                        <span class="modal-content-name">Дата заезда:</span>
+                        <input class="field field-data" type="text" name="trip-start" value="27 апреля 2020" required>
                     </label>
                     <span class="modal-content-warn warn-red">
                         Мы не можем отправить вас в прошлое.
                     </span>
                     <label class="modal-content-departure">
-                        <h4 class="modal-content-h4">Дата выезда:</h4>
-                        <input class="field field-data" type="data" name="trip-end" value="1 сентября 2023"
-                            min="2023-01-01" max="2024-12-31" required>
+                        <span class="modal-content-name">Дата выезда:</span>
+                        <input class="field field-data" type="text" name="trip-end" value="1 сентября 2023" required>
                     </label>
                     <span class="modal-content-warn">
                         На эти даты есть свободные номера. Пока есть.
                     </span>
                     <div class="modal-content-people">
-                        <label class="modal-content-adult">
-                            <h4 class="modal-content-h4">Взрослые:</h4>
+                        <div class="modal-content-adult">
+                            <span class="modal-content-name">Взрослые:</span>
                             <div class="button-number">
-                                <button class="button-minus">
+                                <button class="button-minus" type="button">
                                     <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157"
@@ -382,7 +378,7 @@
                                     </svg>
                                 </button>
                                 <input class="field field-number" type="number" name="adult-count" value="1">
-                                <button class="button-plus">
+                                <button class="button-plus" type="button">
                                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157"
@@ -390,23 +386,25 @@
                                     </svg>
                                 </button>
                             </div>
-                        </label>
-                        <label class="modal-content-child">
-                            <h4 class="modal-content-h4">Дети:</h4>
+                        </div>
+                        <div class="modal-content-child">
+                            <span class="modal-content-name">Дети:</span>
                             <span class="tooltip">
-                                <button class="tooltip-toggle" type="button">
+                                <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
                                     <svg width="2" height="12" viewBox="0 0 2 12" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z"
                                             fill="white" />
                                     </svg>
                                 </button>
-                                <span class="tooltip-text" role="tooltip">Укажите количество детей,
+                                <span class="tooltip-text" role="tooltip" id="tooltip-label-date">
+                                    Укажите количество детей,
                                     которые будут с вами, возраст
-                                    которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                                    которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                                </span>
                             </span>
                             <div class="button-number">
-                                <button class="button-minus">
+                                <button class="button-minus" type="button">
                                     <svg width="14" height="2" viewBox="0 0 14 2" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path class="path-minus" d="M0 0L0 2L14 2V0L0 0Z" fill="#756157"
@@ -414,7 +412,7 @@
                                     </svg>
                                 </button>
                                 <input class="field field-number" type="number" name="child-count" value="0">
-                                <button class="button-plus">
+                                <button class="button-plus" type="button">
                                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path class="path-plus" d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157"
@@ -422,7 +420,7 @@
                                     </svg>
                                 </button>
                             </div>
-                        </label>
+                        </div>
                     </div>
                     <button class="button-modal-content button-blue" type="submit">Найти</button>
                 </form>
